--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  path_provider: ^2.1.4
+  shared_preferences: ^2.3.2
+  flutter_localization: ^0.2.2
+  dropdown_button2: ^2.3.9
+  image_picker: ^1.1.2
+  provider: ^6.1.2
+  font_awesome_flutter: ^10.7.0
+  intl: ^0.19.0
+  path: ^1.9.0
+  url_launcher: ^6.3.0
+  curved_navigation_bar: ^1.0.6
+  carousel_slider: ^5.0.0
+  animated_text_kit: ^4.2.2
+  neumorphic_button: ^0.0.1+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -52,15 +65,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - image/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
