--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -49,6 +48,7 @@ dependencies:
   carousel_slider: ^5.0.0
   animated_text_kit: ^4.2.2
   neumorphic_button: ^0.0.1+2
+  sqflite: ^2.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
