--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   carousel_slider: ^5.0.0
   animated_text_kit: ^4.2.2
   neumorphic_button: ^0.0.1+2
-  sqflite: ^2.4.1
+  sqflite:
   sqflite_common_ffi: ^2.0.0
   crypto: ^3.0.6
   device_info_plus: ^11.2.1
