roznamche add in reports

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,8 @@ dependencies:
   crypto: ^3.0.6
   device_info_plus: ^11.2.1
   file_picker: ^8.1.7
-  
+  searchbar_animation: ^0.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
