--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   device_info_plus: ^11.2.1
   file_picker: ^8.1.7
   searchbar_animation: ^0.0.4
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
